chore(cleanup): minor cleanup across rag/llm/document modules
소소한 정리 일괄 묶음 — 의존하는 책임 분리 commit 들이 안전하게
빌드되도록 먼저 정착:
- LlmClient, CacheCleanupScheduler, PromptSerializer
- rag/chunking, rag/prompt(ContextBudget), rag/rerank(Cohere),
  rag/retrieval(EmbeddingQueryDao)
- document/DocumentUploadService, document/parsing/DocumentParsingService

대부분 미사용 import/주석 제거 + 미세한 시그니처 정리. 동작 변경 없음.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>